edit static location naming

--- a/.config/nginx/mysite.conf
+++ b/.config/nginx/mysite.conf
@@ -9,7 +9,7 @@ server {
         include     uwsgi_params;
     }
 
-    location /static/ {
-        alias /srv/hoseon.me/static/;
+    location /collectstatic/ {
+        alias /srv/hoseon.me/collectstatic/;
     }
 }
