--- a/.config/nginx/mysite.conf
+++ b/.config/nginx/mysite.conf
@@ -9,7 +9,7 @@ server {
         include     uwsgi_params;
     }
 
-    location /collectstatic/ {
+    location /static/ {
         alias /srv/hoseon.me/collectstatic/;
     }
 }
