--- a/.config/nginx/mysite.conf
+++ b/.config/nginx/mysite.conf
@@ -10,6 +10,6 @@ server {
     }
 
     location /static/ {
-        root /srv/hoseon.me/collectstatic/;
+        root /srv/hoseon.me/collectstatic;
     }
 }
