--- a/.config/nginx/mysite.conf
+++ b/.config/nginx/mysite.conf
@@ -3,6 +3,7 @@ server {
     server_name *.compute.amazonaws.com *.hoseon.me;
     charset utf-8;
     client_max_body_size 128M;
+    client_body_buffer_size 10k;
 
     location / {
         uwsgi_pass  unix:///tmp/mysite.sock;
