--- a/.config/nginx/mysite.conf
+++ b/.config/nginx/mysite.conf
@@ -1,6 +1,9 @@
 server {
     listen 80;
-    server_name *.compute.amazonaws.com *.hoseon.me;
+    server_name *.hoseon.me *.compute.amazonaws.com;
+    if ($http_x_forwarded_proto = 'http'){
+    return 301 https://$host$request_uri;
+    }
     charset utf-8;
     client_max_body_size 128M;
 
@@ -11,9 +14,5 @@ server {
 
     location /static/ {
         alias /srv/hoseon.me/collectstatic/;
-    }
-
-    if ($http_x_forwarded_proto = 'http'){
-    return 301 https://$host$request_uri;
     }
 }
