--- a/.config/nginx/mysite.conf
+++ b/.config/nginx/mysite.conf
@@ -5,7 +5,8 @@ server {
     return 301 https://$host$request_uri;
     }
     charset utf-8;
-    client_max_body_size 128M;
+    client_max_body_size 1024M;
+    client_body_buffer_size 4096K;
 
     location / {
         uwsgi_pass  unix:///tmp/mysite.sock;
