--- a/.config/uwsgi/mysite.ini
+++ b/.config/uwsgi/mysite.ini
@@ -9,6 +9,7 @@ gid = deploy
 socket = /tmp/mysite.sock
 chmod-socket = 666
 chown-socket = deploy:deploy
+buffer-size = 65535
 
 enable-threads = true
 master = true
